[package]
name = "interlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"]}
rand = "0.8.5"
rustix = { version = "0.38.28", features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.9.0"
