[package]
name = "interlog_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
derive_more = "0.99.17"
hashbrown = "0.14.5"
rand = { version = "0.8.5", features = ["small_rng"]}
rustix = { version = "0.38.28", features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
proptest = "1.4.0"
tempfile = "3.9.0"
