[package]
name = "interlog_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
rustix = { version = "0.38.28", features = ["fs"] }
ports = { path = "../ports" }
foldhash = "0.1.3"

[dev-dependencies]
arbtest = {workspace = true}
pretty_assertions = {workspace = true}
tempfile = "3.9.0"
test_utils = { path = "../test_utils"}
