[package]
name = "interlog_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
ports = { path = "../ports" }
foldhash = "0.1.3"
hashbrown = { workspace = true }
portable-atomic = "1.11.0"
rustix-uring = "0.6.0"
rustix = "1.0.7" # manually set to be the same as used by rustix

[dev-dependencies]
arbitrary = {workspace = true}
arbtest = {workspace = true}
pretty_assertions = {workspace = true}
tempfile = "3.9.0"
test_utils = {path = "../test_utils"}
